[gd_scene load_steps=3 format=3 uid="uid://c040wgnuc8xw5"]

[ext_resource type="Script" path="res://Scripts/connection_handler.gd" id="1_lprfn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dgds2"]
radius = 161.003

[node name="ConnectionHandler" type="Node2D"]
script = ExtResource("1_lprfn")

[node name="AreaDetectConnection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectConnection"]
shape = SubResource("CircleShape2D_dgds2")

[connection signal="body_entered" from="AreaDetectConnection" to="." method="_on_area_detect_connection_body_entered"]
[connection signal="body_exited" from="AreaDetectConnection" to="." method="_on_area_detect_connection_body_exited"]
